MDEV-20795 CAST(inet6 AS BINARY) returns wrong result